src/test/deca/context/invalid/added/int_null.deca
// Description:
// 
// Resultats:
//
//
//

{
    int x = null;
}